--- a/biblio/dsym.bib
+++ b/biblio/dsym.bib
@@ -194,6 +194,36 @@
   address = "New York"
 }
 
+@article{M11,
+  author  = "E. Molnár",
+  title   = "On D-Symbols and Orbifolds in an Algorithmic Way",
+  year    = "2011",
+  journal = "Atti Semin. Mat. Fis. Univ. Modena Reggio Emilia",
+  volume  = "58",
+  pages   = "263--276"
+}
+
+@article{K11,
+  author  = "R. Kós",
+  title   = "Realization of D-symbols represented by Coxeter groups",
+  year    = "2011",
+  journal = "Atti Semin. Mat. Fis. Univ. Modena Reggio Emilia",
+  volume  = "58",
+  pages   = "233--244"
+}
+
+@article{DDH98,
+  author  = "N. P. Dolbilin and A. W. M. Dress and D. H. Huson",
+  title   = "Two finiteness theorems for periodic tilings of d-dimensional
+    euclidean space",
+  year    = "1998",
+  journal = "Discrete \& Computational Geometry",
+  publisher = "Springer",
+  volume  = "20",
+  number  = "2",
+  pages   = "143--153"
+}
+
 @misc{MYHOME,
   author  = "Lajos Boróczki",
   title   = "http://www.math.bme.hu/\~{}boroczki/{D}-symbol"
